This commit adds:
- Packages for database, websocket, user, cookies and authentication
- connectivity in server.js for database
- Fixes to UI along with CSS

--- a/src/client/src/components/dashboard.html
+++ b/src/client/src/components/dashboard.html
@@ -32,6 +32,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
     <link rel='stylesheet' type='text/css' href='/public/styles.css'>
+    <link rel='stylesheet' type='text/css' href='/src/client/src/components/dashboard.css'>
 </head>
 
 <body>
