--- a/src/client/src/components/scanlog.html
+++ b/src/client/src/components/scanlog.html
@@ -31,12 +31,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
     <link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials">
-    <link type="text/css" href="styles.css">
+    <link type="text/css" href="public/styles.css">
+    <link rel="stylesheet" type="text/css" href="/src/client/src/components/scanlog.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top bg-primary" role="navigation">
-
         <div class="container-fluid">
             <div id="row flex-nowrap">
                 <div id="d-flex sidebar-wrapper">
@@ -167,7 +167,8 @@
             <br>
         </div>
     </form>
-    <hr><section>
+    <hr>
+    <section>
         <div>
             <table class="table">
                 <thead>
@@ -199,7 +200,7 @@
                 </tbody>
               </table>
         </div>
-        </section>
+    </section>
     <div class="modal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
