--- a/src/client/src/components/signup.css
+++ b/src/client/src/components/signup.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: gray;
+  background: slategray;
   overflow: hidden;
 }
 .container {
